# bible

./: .clang-format  .env  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.5ef25a9  CMakeLists.txt.user.5ef25a9.22  CMakeLists.txt.user.e05804a  CMakeLists.txt.user.e05804a.4.10-pre1  Dockerfile  Makefile  README.md  bible.desktop  bible.pro  buildspec.yml  conf.pri  coverage  coverage.sh  docker-compose.yml  entrypoint  github_action_build  harbour-freebible.desktop  log.txt
modules/: curl.cmake  (+1 more)
src/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  LocaleDesc.cpp  LocaleDesc.h  ModulesGroupModel.cpp  ModulesGroupModel.h  ModulesModel.cpp  ModulesModel.h  TextProgressBar.cpp  TextProgressBar.h  bible.cpp  booksmodel.h  commentsmodel.cpp  databasemanager.h  dbmanager.cpp  dbmanager.h  global.h  historymodel.cpp  historymodel.h  host.cpp  host.h  main.cpp  modulesgroupsform.cpp  modulesgroupsform.h  modulesgroupsreader.cpp  registry.cpp  src.pro
src/core/: CMakeLists.txt
src/core/include/: dereferenceiterator.h  global.h  invaliddata.h  locallanguage.h
src/core/src/: locallanguage.cpp
src/dbmanager/: CMakeLists.txt  dbmanager_global.h
src/dbmanager/include/: Processor.h  binding.h  db.h  dbtypes.h  processor.h
src/dbmanager/src/: ConnectionManager.cpp  Executor.cpp  Selector.cpp  db.cpp  manipulator.cpp  processor.cpp
src/dbmanager/src/include/: ConnectionManager.h  Executor.h  Selector.h  dbmapper.h  manipulator.h
src/modules/: CMakeLists.txt
src/modules/include/: book.h  booksmodel.h  comment.h  commentsmodel.h  dbmanager.h  groupmodules.h  groupmodulesmodel.h  host.h  info.h  managergroup.h  managerregistry.h  model.h  modelbook.h  modelchapter.h  modelcomment.h  modelgroupmodules.h  modelhost.h  modelmodule.h  modelmoduledownload.h  modelrecord.h  modelregistry.h  modelupdate.h  modelverse.h  module.h  moduledownload.h  modulemodel.h  modulesgroupsmodel.h  record.h  registry.h  verse.h  versesmodel.h
src/modules/src/: book.cpp  booksmodel.cpp  comment.cpp  commentsmodel.cpp  dbmanager.cpp  groupmodules.cpp  groupmodulesmodel.cpp  host.cpp  info.cpp  managergroup.cpp  managerregistry.cpp  model.cpp  modelbook.cpp  modelchapter.cpp  modelcomment.cpp  modelgroupmodules.cpp  modelhost.cpp  modelmodule.cpp  modelmoduledownload.cpp  modelrecord.cpp  modelregistry.cpp  modelupdate.cpp  modelverse.cpp  module.cpp  moduledownload.cpp  modulemodel.cpp  qsortfiltersqlquerymodel.cpp  record.cpp  registry.cpp  verse.cpp  versesmodel.cpp
src/netmanager/: CMakeLists.txt  Makefile
src/netmanager/include/: curleasy.h  curlmulti.h  downloader.h  downloadmanager.h  netmanager_global.h  quickdownload.h  textprogressbar.h
src/netmanager/src/: curleasy.cpp  curlmulti.cpp  downloader.cpp  downloadmanager.cpp  quickdownload.cpp  textprogressbar.cpp
src/network/: downloadmanager.cpp  downloadmanager.h  registry.cpp  registry.h  textprogressbar.cpp  textprogressbar.h
src/qml/: bible.qml
src/qml/pages/: BooksPage.qml
src/sql/models/: booksmodel.cpp  modulesgroupsmodel.cpp  modulesgroupsmodel.h
tests/: CMakeLists.txt  CMakeLists.txt.in  downloadmanager-test.cpp  gtest_global.h  iqsqldatabase.h  iqsqlquery.h  iqtimer.h  main.cpp  mock_downloadmanager.h  mock_iqsqldatabase.h  mock_iqsqldatabase.h.autosave  mock_iqsqlquery.h  mock_iqtimer.h  mock_modulesgroupmodel.h  mock_modulesmodel.h  mock_qbytearray.h  mock_qfile.h  mock_qfileinfo.h  mock_qjsonarray.h  mock_qjsonobject.h  mock_qjsonvalue.h  mock_qnetworkaccessmanager.h  mock_qnetworkreply.h  mock_qnetworkrequest.h  mock_qobject.h  mock_qqueue.h  mock_qsettings.h  mock_qsqldatabase.h  mock_qsqlerror.h  mock_qsqlquery.h  mock_qsqlrecord.h  mock_qsqltablemodel.h  mock_qstring.h  mock_qstringlist.h  mock_qtime.h  mock_qtimer.h  mock_qurl.h  mock_qvariant.h  mock_textprogressbar.h  modulesgroupmodel-test.cpp  (+6 more)
tests/QtCore/: QtCore  qabstractitemmodel.h  qbytearray.h  qfile.h  qfileinfo.h  qiodevice.h  qjsonarray.h  qjsondocument.h  qjsonobject.h  qjsonvalue.h  qobject.h  qqueue.h  qstring.h  qstringlist.h  qtimer.h  qurl.h  qvariant.h
tests/QtNetwork/: QtNetwork  qnetworkaccessmanager.h  qnetworkreply.h  qnetworkrequest.h  qsslerror.h
tests/QtSql/: qsqldatabase.h  qsqlerror.h  qsqlquery.h  qsqlquerymodel.h  qsqlrecord.h  qsqltablemodel.h  qtsqlglobal.h
tests/integration/: CMakeLists.txt  integration.pro  tst_downloadmodules.cpp
tests/integration/base_test/: CMakeLists.txt
tests/integration/entities/: entities.pro
tests/integration/modules/: CMakeLists.txt  tst_groupmodules.cpp  tst_groupmodules.h  tst_groupmodulesmodel.cpp  tst_host.cpp  tst_host.h  tst_managergroup.cpp  tst_managergroup.h  tst_managerregistry.cpp  tst_managerregistry.h  tst_modelbook.cpp  tst_modelbook.h  tst_modelchapter.cpp  tst_modelchapter.h  tst_modelcomment.cpp  tst_modelcomment.h  tst_modelgroupmodules.cpp  tst_modelgroupmodules.h  tst_modelhost.cpp  tst_modelhost.h  tst_modelmodule.cpp  tst_modelmodule.h  tst_modelmoduledownload.cpp  tst_modelrecord.cpp  tst_modelrecord.h  tst_modelregistry.cpp  tst_modelregistry.h  tst_modelverse.cpp  tst_modelverse.h  tst_module.cpp  tst_module.h  tst_modulemodel.cpp  tst_registry.cpp  tst_registry.h
tests/integration/netmanager/: CMakeLists.txt  tst_downloadmanager.cpp  tst_quickdownload.cpp
tests/integration/network/: network.pro
tests/integration_tests/: CMakeLists.txt  main.cpp  tst_downloadmodules.cpp
tests/qt/QtCore/: qabstractitemmodel.h  qchar.h  qconfig.h  qdatetime.h  qfile.h  qfileinfo.h  qglobal.h  qjsonarray.h  qjsondocument.h  qjsonobject.h  qjsonvalue.h  qlocale.h  qlogging.h  qmath.h  qobject.h  qqueue.h  qregularexpression.h  qstring.h  qstringlist.h  qsysinfo.h  qtextcodec.h  qtimer.h  qtypeinfo.h  qurl.h  qvariant.h
tests/qt/QtNetwork/: QtNetwork  QtNetworkDepends  qnetworkreply.h  qnetworkrequest.h  qtnetworkglobal.h
tests/qt/QtSql/: qsqldatabase.h  qsqlerror.h  qsqlrecord.h  qsqltablemodel.h
tests/quazip/: JlCompress.h  quazip.h
tests/quazip/quazip/: JlCompress.h
tests/scripts/: post_unit_tests.sh  pre_unit_tests.sh  runCoverage.sh
(+151 files in other folders)
